<resources>
    <string name="app_name">Acir</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="web_server_header">Web Server</string>
    <string name="web_server_enabled">Abilita Web Server</string>
    <string name="web_server_port">Porta in ascolto</string>
    <string name="web_server_address">Indirizzo</string>
    <string name="dashb_header">Dashboard</string>
    <string name="dashb_refresh">Refresh secondi</string>
</resources>
